--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
-.App {
+body {
+  background-color: #2e3440;
+  color: #eceff4;
+}
+
+.title-wrapper h1 {
+  margin-bottom: 0.2rem;
+}
+
+.title-wrapper span {
+  color: #d8dee9;
+}
+
+.title-wrapper {
   text-align: center;
+  margin-bottom: 0.5rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.content-wrapper {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
 }
 
-.App-link {
-  color: #61dafb;
+.nav-wrapper {
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+  background-color: #d08770;
+  color: #eceff4;
+  border: 2px solid transparent;
+  padding: 0.5rem;
+  outline: none;
+
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+}
+
+button:active,
+button:focus {
+  border: 2px solid #bf616a;
+}
+
+input {
+  border: 2px solid transparent;
+  padding: 0.5rem;
+
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+}
+
+input:focus-visible {
+  outline: none;
 }
